--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -11,7 +11,7 @@ footer {
   text-align: center;
   color: #ddd;
 
-  background: #102134;
+  background: $brand-dark;
 
   .text-credit { color: #38506A; }
 
